<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name: </string>
    <string name="phone">Phone: </string>
    <string name="size">Size: </string>
    <string name="date">Select Date: </string>
    <string name="time">Select Time: </string>
    <string name="confirm">Confirm</string>
    <string name="reset">reset</string>
    <string name="smoke">Table in smoking area</string>
</resources>