<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="Enter name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/phone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="Enter phone number"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/enterSize"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="Enter number of people"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="18dp"
            android:text="@string/date"
            android:textSize="18dp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/dp"
            android:layout_width="293dp"
            android:layout_height="135dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/time"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/tp"
            android:layout_width="293dp"
            android:layout_height="135dp"
            android:calendarViewShown="false"
            android:timePickerMode="spinner" />

        <CheckBox
            android:id="@+id/cb"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/smoke" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.5"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.5"
            android:text="@string/reset" />
    </LinearLayout>
</LinearLayout>



